--- a/src/app/home-page/navbar/navbar.component.css
+++ b/src/app/home-page/navbar/navbar.component.css
@@ -5,7 +5,8 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 10px 50px 20px;
+  padding-left: 0.1%;
+  padding-right: 2%;
 }
 
 .logo img {
@@ -89,11 +90,11 @@ ul.nav-links {
   background-color: #f9f9f9;
   border-radius: 5px;
   display: flex;
-  justify-content: space-between; 
+  justify-content: space-between;
   align-items: center;
-  
+
   transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
- 
+
   backface-visibility: hidden;
 }
 
@@ -102,10 +103,10 @@ ul.nav-links {
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
 }
 .product-card img {
-  max-width: 50%; 
+  max-width: 50%;
   height: auto;
 }
-div.product-info { 
+div.product-info {
   text-align: right;
 }
 
