--- a/src/app/home-page/navbar/navbar.component.css
+++ b/src/app/home-page/navbar/navbar.component.css
@@ -42,7 +42,7 @@ ul.nav-links {
   text-decoration: none;
   color: #fff;
   font-weight: bold;
-  font-size: 16px;
+  font-size: 3vw;
 }
 
 .nav-links a:hover {
