--- a/src/app/home-page/menu/menu.component.html
+++ b/src/app/home-page/menu/menu.component.html
@@ -5,10 +5,10 @@
   </video>
 
   <div class="video-text">
-    <h3>Scopri i nostri prodotti e le nostre schede tecniche</h3>
-    <h4>Esplora il futuro della comunicazione con la nostra vasta selezione.</h4>
-    <p>Dai personal computer potenti alle prestazioni straordinarie, abbiamo tutto ciò di cui hai bisogno per rimanere
-      connesso e aggiornato.</p>
-    <button class="btn" (click)="navigateToPage2()">Scopri di più</button>
+    <h2>Scopri i nostri prodotti e le nostre schede tecniche</h2>
+    <h3>Esplora il futuro della comunicazione con la nostra vasta selezione.</h3>
+    <h4>Dai personal computer potenti alle prestazioni straordinarie, abbiamo tutto ciò di cui hai bisogno per rimanere
+      connesso e aggiornato.</h4>
+    <button class="bott" (click)="navigateToPage2()">"Scopri di più"</button>
   </div>
 </div>
