--- a/src/app/home-page/navbar/navbar.component.css
+++ b/src/app/home-page/navbar/navbar.component.css
@@ -6,7 +6,8 @@
   justify-content: space-between;
   align-items: center;
   padding-left: 0.1%;
-  padding-right: 2%;
+  padding-right: 5%;
+  cursor: pointer;
 }
 
 .logo img {
@@ -22,7 +23,7 @@
 .nav-links {
   list-style-type: none;
   margin: 0;
-  padding: 0;
+  padding: 0 0 0 15px;
   display: flex;
 
 }
@@ -42,7 +43,7 @@ ul.nav-links {
   text-decoration: none;
   color: #fff;
   font-weight: bold;
-  font-size: 3vw;
+  font-size: 100%;
 }
 
 .nav-links a:hover {
@@ -58,9 +59,8 @@ ul.nav-links {
 .nav-links .dropdown-content {
   display: none;
   position: absolute;
-  background-color: #fff;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  background-color: #ffffff;
+  box-shadow: 10px 2px 4px 20px rgba(172, 163, 163, 0.2);
   z-index: 1;
   border-radius: 5px;
 }
@@ -74,6 +74,7 @@ ul.nav-links {
   padding: 10px;
   text-decoration: none;
   display: block;
+  font-size: 80%;
   transition: background-color 0.3s;
 }
 
@@ -83,17 +84,17 @@ ul.nav-links {
 
 /* Product Card */
 .product-card {
-  border: 1px solid #ddd;
-  padding: 10px 20% 0px 20%;
-  margin: 10px 0;
-  width: 100%;
+  border: 5px solid #ddd;
+  padding: 10px 20% 10px 20%;
+  margin: 2% 10%;
+  width: 80%;
   background-color: #f9f9f9;
   border-radius: 5px;
   display: flex;
   justify-content: space-between;
   align-items: center;
 
-  transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+  transition: transform 0.9s ease-in-out, box-shadow 0.3s ease-in-out;
 
   backface-visibility: hidden;
 }
