--- a/src/app/home-page/footer/footer.component.html
+++ b/src/app/home-page/footer/footer.component.html
@@ -8,7 +8,7 @@
       </ul>
       
       <div class="copyright">
-        <p>&copy; 2023 TecnoTrendy. Tutti i diritti riservati.</p>
+        <p>&copy; 2023 Manuel Magini. Tutti i diritti riservati.</p>
       </div>
     </div>
   </footer>
