--- a/src/app/home-page/menu/menu.component.css
+++ b/src/app/home-page/menu/menu.component.css
@@ -1,67 +1,129 @@
+/* Stile per il contenitore principale */
+.main-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  min-height: 10vh;
+  overflow: hidden; /* Nasconde il contenuto oltre i limiti del contenitore */
+  position: relative;
+}
+  @media (max-width: 768px) {
+    .main-container {
+      min-height: 15vh; /* Altezza diversa per schermi più piccoli */
+      padding: 40px; /* Aggiungi un padding per separare i contenuti sui dispositivi più piccoli */
+    }
+  }
+/* Stile per il carosello */
+.product-carousel {
+  display: flex;
+  overflow: hidden;
+  animation: carouselAnimation 35s linear infinite;
+}
+
+/* Stile per le immagini all'interno del carosello */
+.product-carousel img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+/* Animazione del carosello */
+@keyframes carouselAnimation {
+  0% {
+    transform: translateX(0);
+  }
+
+  100% {
+    transform: translateX(-100%);
+  }
+}
+
 .video-container {
   position: relative;
   width: 100%;
 
-  min-height: auto;
+  @media (max-width: 418px) {
+    min-height: 30vh;
+    height: 50px;
+     
+  }
 }
 
 .video {
   width: 100%;
-  height: 90%;
- 
+  height: 100%;
   object-fit: cover;
 }
 
 .video-text {
   position: absolute;
   top: 0;
-  left: 10%;
+  left: 0;
   width: 80%;
-  height: 35%;
+  height: 50%;
   background-color: rgba(88, 136, 207, 0.5);
   color: #fff;
-  padding: 5% 2% 5% 5%; 
+  padding: 5% 2% 5% 5%;
   font-family: 'Mooli', sans-serif;
   border-radius: 10px;
-  font-size: 2vw; /* Imposta il testo con unità di misura relative basate sulla larghezza del contenitore */
+  font-size: 2vw;
 }
 
 /* animazione testo */
 h4 {
   animation: slide-in 3s ease-out;
-  color: #08ffde;
-  font-size: 60%; /* Modifica la dimensione del testo con unità di misura relative basate sulla larghezza del contenitore */
+  color: #00d2b5;
+  font-size: 60%;;
 }
+
 h2 {
-  font-size: 100%; /* Modifica la dimensione del testo con unità di misura relative basate sulla larghezza del contenitore */
+  font-size:  100%;
 }
+
 h3 {
-  font-size: 60%; /* Modifica la dimensione del testo con unità di misura relative basate sulla larghezza del contenitore */
+  font-size: 60%;
 }
 
 @keyframes slide-in {
   0% {
-      transform: translateX(-100%);
-      opacity: 0;
+    transform: translateX(-100%);
+    opacity: 0;
   }
   100% {
-      transform: translateX(0);
-      opacity: 1;
+    transform: translateX(0);
+    opacity: 1;
   }
 }
 
 /* Stile del pulsante */
-.video-text .bott {
-  background-color: #08ac96;
+.video-text .btn {
+  background-color: #00d2b5;
   color: white;
   border: none;
   border-radius: 5px;
   margin-top: 1%;
-  padding: 0.3rem 0.8rem;
+  padding: 10px 20px;
   cursor: pointer;
-  font-size: 0.9em; /* Modifica la dimensione del testo del pulsante */
+  font-size: 0.9rem;
 }
 
 .video-text .btn:hover {
   background-color: #009c8e;
+}
+@media (max-width: 468px) {
+  .video-text {
+    font-size: 1vw; /* Cambia la dimensione del testo in base alla larghezza dello schermo */
+  }
+
+  h2 {
+    font-size: 1rem; /* Cambia la dimensione del titolo h2 in base alla larghezza dello schermo */
+  }
+
+  h3 {
+    font-size: 0.7rem; /* Cambia la dimensione di h3 in base alla larghezza dello schermo */
+  }
+
+h4{
+  font-size: 0.4rem;
+}
 }
