--- a/src/app/home-page/navbar/navbar.component.css
+++ b/src/app/home-page/navbar/navbar.component.css
@@ -57,21 +57,24 @@ ul.nav-links {
 }
 
 .nav-links .dropdown-content {
-  display: none;
+  display:none;
   position: absolute;
   background-color: #ffffff;
   box-shadow: 10px 2px 4px 20px rgba(172, 163, 163, 0.2);
   z-index: 1;
   border-radius: 5px;
+ 
+ 
 }
 
 .nav-links .dropdown:hover .dropdown-content {
   display: block;
+  height: auto;
 }
 
 .nav-links .dropdown-content a {
   color: #333;
-  padding: 10px;
+  padding:2px;
   text-decoration: none;
   display: block;
   font-size: 80%;
