--- a/src/app/home-page/footer/footer.component.css
+++ b/src/app/home-page/footer/footer.component.css
@@ -6,37 +6,43 @@ footer {
   margin: 0; /* Rimuovi il margine che potrebbe causare spazi bianchi */
   text-align: center;
   z-index: 2;
-  height: 15vh; /* Riduci l'altezza del footer al 5% dell'altezza della viewport */
+  height: 15vh; /* Riduci l'altezza del footer al 15% dell'altezza della viewport */
 }
+
+footer li {
+  margin-right: 20px;
+  display: inline;
+}
+
+footer a {
+  text-decoration: none;
+  color: #fff;
+  font-weight: bold;
+  transition: color 0.3s ease-in-out; 
+}
+
+/* Stile al passaggio del mouse sui link */
+footer a:hover {
+  text-decoration: underline;
+  color: #f39c12; /* Cambia il colore al passaggio del mouse */
+}
+
+/* Stile per il copyright */
+.copyright {
+  margin-top: 20px;
+  font-size: 14px;
+  opacity: 0.8; /* Opacità leggermente ridotta */
+}
+
+@media (max-width: 768px) {
+  /* Modifiche specifiche per schermi più piccoli */
+  footer {
+    height: 21vh; /* Altezza ridotta per schermi più piccoli */
+    padding: 55px 0; /* Riduci il padding verticale */
+  }
   
   footer li {
-    margin-right: 20px;
-    display: inline;
+    display: block; /* Visualizza gli elementi della lista in colonne */
+    margin-right: 0; /* Rimuovi il margine tra gli elementi */
   }
-  
-  footer a {
-    text-decoration: none;
-    color: #fff;
-    font-weight: bold;
-    transition: color 0.3s ease-in-out; 
-  }
-  
-  /* Stile al passaggio del mouse sui link */
-  footer a:hover {
-    text-decoration: underline;
-    color: #f39c12; /* Cambia il colore al passaggio del mouse */
-  }
-  
-  /* Stile per il copyright */
-  .copyright {
-    margin-top: 20px;
-    font-size: 14px;
-    opacity: 0.8; /* Opacità leggermente ridotta */
-  }
-  @media (max-width: 768px) {
-    /* Modifiche specifiche per schermi più piccoli */
-    footer {
-      height: 21vh; /* Altezza ridotta per schermi più piccoli */
-      padding: 55px 0; /* Riduci il padding verticale */
-    }
-  }
+}
