--- a/src/app/form/data/data.component.css
+++ b/src/app/form/data/data.component.css
@@ -3,10 +3,9 @@
   width: 80%;
 }
 .container{
-  margin-top: 50px;
-  margin-bottom: 50px;
   
-  margin-right: 50px;
+  margin:10px auto;
+  
   padding: 5% 5% 5% 20%; 
   border: 1px solid black;
   border-radius: 10px;
