--- a/src/app/home-page/footer/footer.component.html
+++ b/src/app/home-page/footer/footer.component.html
@@ -4,7 +4,7 @@
     <div class="footer-content">
       <ul>
         <li><a href="#">Area Riservata</a></li>
-        <li><button (click)="navigateToChiSiamo()">Chi siamo</button></li>
+        <li><button  class="btn btn-success" (click)="navigateToChiSiamo()">Chi siamo</button></li>
       </ul>
       
       <div class="copyright">
