--- a/src/app/home-page/navbar/navbar.component.css
+++ b/src/app/home-page/navbar/navbar.component.css
@@ -1,22 +1,32 @@
 /* Navbar */
 .navbar {
-  background-color: #bdd9fd;
+  background-color: #4C5656;
   color: #fff;
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding-left: 0.1%;
   padding-right: 5%;
-  cursor: pointer;
+  
+
 }
 
 .logo img {
-  width: 150px;
+  width: 100px;
   height: 100%;
   margin-right: 10px;
   display: block;
   margin: 5px auto 5px 18%;
+  border: 1px solid #fff;
+  box-shadow: 5px 1px 30px 5px rgb(255, 255, 255);
 
+}
+@media screen and (max-width: 768px) {
+  .logo img {
+    width: 50px; /* Modifica le dimensioni per schermi più piccoli */
+    height: auto; /* Imposta l'altezza su "auto" per mantenere l'aspetto proporzionato */
+    margin: 5px auto auto 10px; /* Aggiorna i margini per centrare l'elemento */
+  }
 }
 
 /* Links di navigazione */
@@ -31,6 +41,7 @@
 .nav-links li {
   margin-right: 20px;
   font-family: 'Mooli', sans-serif;
+  
 }
 ul.nav-links {
  margin-top: 1%;
@@ -44,41 +55,52 @@ ul.nav-links {
   color: #fff;
   font-weight: bold;
   font-size: 100%;
+  cursor: pointer;
 }
 
 .nav-links a:hover {
-  color: #4c6b77;
+  color: #C6FF79;
 }
 
 /* Dropdown */
+/* Stile di base per il menu a discesa */
 .nav-links .dropdown {
   position: relative;
   display: inline-block;
 }
 
 .nav-links .dropdown-content {
-  display:none;
+  display: none;
   position: absolute;
   background-color: #ffffff;
-  box-shadow: 10px 2px 4px 20px rgba(172, 163, 163, 0.2);
+  box-shadow: 1px 2px 4px 2px rgba(172, 163, 163, 0.2);
   z-index: 1;
   border-radius: 5px;
- 
- 
+  min-width: 160px; /* Larghezza minima del menu a discesa */
+  text-align: left; /* Allinea il testo a sinistra */
 }
 
-.nav-links .dropdown:hover .dropdown-content {
+/* Mostra il menu a discesa al passaggio del mouse o al tocco per dispositivi mobili */
+.nav-links .dropdown:hover .dropdown-content, .nav-links .dropdown:focus-within .dropdown-content {
   display: block;
-  height: auto;
 }
 
+/* Stile dei link nel menu a discesa */
 .nav-links .dropdown-content a {
   color: #333;
-  padding:2px;
+  padding: 10px;
   text-decoration: none;
-  display: block;
   font-size: 80%;
+  display: block;
   transition: background-color 0.3s;
+}
+
+/* Aggiungi spazi tra i link e aggiorna il font-size per una migliore esperienza mobile */
+@media (max-width: 768px) {
+  .nav-links .dropdown-content a {
+    padding: 8px;
+    font-size: 16px;
+  }
 }
 
 .nav-links .dropdown-content a:hover {
