--- a/src/app/home-page/menu/menu.component.css
+++ b/src/app/home-page/menu/menu.component.css
@@ -19,7 +19,7 @@
 
 /* Stile per le immagini all'interno del carosello */
 .product-carousel img {
-  width: 10%;
+  max-width: 10%;
   height:auto;
   cursor: pointer;
 }
@@ -42,7 +42,7 @@ img{
   position: relative;
   width: 100%;
 
-  @media (max-width: 418px) {
+  @media (max-width: 768px) {
     min-height: 30vh;
     height: 50px;
      
@@ -120,17 +120,14 @@ h3 {
     position: relative;
   }
   .product-carousel img {
-    width: 20%;
+    max-width: 25%;
     height:auto;
   }
   img{
     margin-left: 10px;
     margin-right:10px;
   }
-  .video-container {
-    max-height: 10vh;
-    height: 20px;
-  }
+  
   .video-text {
     font-size: 1vw;
   }
@@ -145,54 +142,4 @@ h3 {
   }
 }
 
-
-@media (min-width: 1025px) {
-  .main-container {
-    min-height: 10vh;
-    padding: 0;
-  }
-  .video-container {
-    min-height: 50px;
-    height: 100%;
-  }
-  .video-text {
-    font-size: 2vw;
-  }
-  h2 {
-    font-size: 100%;
-  }
-  h3 {
-    font-size: 60%;
-  }
-  h4 {
-    font-size: 60%;
-  }
-}
-/* Schermi molto piccoli, ad esempio smartphone in modalità landscape */
-@media (max-width: 320px) {
-  .main-container {
-    min-height: 20vh; /* Altezza diversa per schermi molto piccoli */
-  }
-
-  .video-container {
-    min-height: 40vh; /* Altezza diversa per schermi molto piccoli */
-    height: auto; /* Annulla l'altezza specificata per i dispositivi molto piccoli */
-  }
-
-  .video-text {
-    font-size: 1.5vw; /* Cambia la dimensione del testo in base alla larghezza dello schermo */
-  }
-
-  h2 {
-    font-size: 1rem; /* Cambia la dimensione del titolo h2 in base alla larghezza dello schermo */
-  }
-
-  h3 {
-    font-size: 0.8rem; /* Cambia la dimensione di h3 in base alla larghezza dello schermo */
-  }
-
-  h4 {
-    font-size: 0.5rem; /* Cambia la dimensione di h4 in base alla larghezza dello schermo */
-  }
-}
 
