--- a/src/app/home-page/navbar/navbar.component.css
+++ b/src/app/home-page/navbar/navbar.component.css
@@ -101,6 +101,10 @@ ul.nav-links {
     padding: 8px;
     font-size: 16px;
   }
+  .product-card img {
+    max-width: 200%;
+    
+  }
 }
 
 .nav-links .dropdown-content a:hover {
@@ -110,7 +114,7 @@ ul.nav-links {
 /* Product Card */
 .product-card {
   border: 5px solid #ddd;
-  padding: 10px 20% 10px 20%;
+  padding: 10px 20% 10px 5%;
   margin: 2% 10%;
   width: 80%;
   background-color: #f9f9f9;
