--- a/src/app/home-page/navbar/navbar.component.css
+++ b/src/app/home-page/navbar/navbar.component.css
@@ -101,10 +101,7 @@ ul.nav-links {
     padding: 8px;
     font-size: 16px;
   }
-  .product-card img {
-    max-width: 200%;
-    
-  }
+
 }
 
 .nav-links .dropdown-content a:hover {
@@ -135,6 +132,11 @@ ul.nav-links {
 .product-card img {
   max-width: 50%;
   height: auto;
+}
+@media (max-width: 768px) {
+.product-card img {
+  max-width: 100%; 
+}
 }
 div.product-info {
   text-align: right;
