aggiornamento page chi siamo

--- a/src/app/chi-siamo/chi-siamo.component.html
+++ b/src/app/chi-siamo/chi-siamo.component.html
@@ -9,7 +9,7 @@
         </p>
         <ol>
             <li>
-                <strong>Intestazione:</strong> Ho creato un'intestazione con un'ampia immagine di sfondo, un titolo e una breve descrizione. Ho anche implementato un menu di navigazione principale con link a risorse online selezionate.
+                <strong>Intestazione:</strong> Ho creato un'intestazione con un video di presentazione utile alla vendita , due caroselli di immagini di prodotti , un titolo e una breve descrizione. Ho anche implementato un menu di navigazione principale con link a risorse online selezionate.
             </li>
             <li>
                 <strong>Form di Contatto:</strong> Ho progettato un modulo di contatto per la raccolta di dati, inclusi nome, , email, e messaggio. Ho implementato rigorose validazioni lato-client per garantire la correttezza dei dati inseriti dai visitatori.
