aggiornamento con pagina 404

--- a/src/app/chi-siamo/chi-siamo.component.html
+++ b/src/app/chi-siamo/chi-siamo.component.html
@@ -2,10 +2,10 @@
     <div >
         <h2>Il Mio Lavoro</h2>
         <p>
-            Ciao, sono un programmatore appassionato e ho lavorato su questa landing page dinamica seguendo le linee guida fornite.
+            Ciao, sono un programmatore appassionato e ho lavorato su questa landing page dinamica seguendo le linee guida fornite per il Project works.
         </p>
         <p>
-            Ho utilizzato la tecnologie front-end con Angular per creare un'esperienza web . La pagina è suddivisa in diverse sezioni:
+            Ho utilizzato la tecnologia Angular per creare un'esperienza web . La pagina è suddivisa in diverse sezioni:
         </p>
         <ol>
             <li>
