--- a/src/app/home-page/menu/menu.component.css
+++ b/src/app/home-page/menu/menu.component.css
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  overflow: hidden; /* Nasconde il contenuto oltre i limiti del contenitore */
+  overflow: hidden;
   position: relative;
   
 }
@@ -12,9 +12,7 @@
 /* Stile per il carosello */
 .product-carousel {
   display: flex;
-  
   animation: carouselAnimation 35s linear infinite;
-  
 }
 
 /* Stile per le immagini all'interno del carosello */
@@ -32,7 +30,6 @@ img{
   0% {
     transform: translateX(0);
   }
-
   100% {
     transform: translateX(-100%);
   }
@@ -73,7 +70,7 @@ img{
 h4 {
   animation: slide-in 3s ease-out;
   color: #00d2b5;
-  font-size: 60%;;
+  font-size: 70%;;
 }
 
 h2 {
@@ -116,7 +113,7 @@ h3 {
     display: flex;
     flex-direction: column;
     align-items: center;
-    overflow: hidden; /* Nasconde il contenuto oltre i limiti del contenitore */
+    overflow: hidden;
     position: relative;
   }
   .product-carousel img {
@@ -138,7 +135,7 @@ h3 {
     font-size: 0.7rem;
   }
   h4 {
-    font-size: 0.4rem;
+    font-size: 0.7rem;
   }
 }
 
