--- a/src/app/home-page/navbar/navbar.component.css
+++ b/src/app/home-page/navbar/navbar.component.css
@@ -18,14 +18,14 @@
   display: block;
   margin: 5px auto 5px 18%;
   border: 1px solid #fff;
-  box-shadow: 5px 1px 30px 5px rgb(255, 255, 255);
+  box-shadow: 4px 1px 10px 4px rgb(162, 253, 102);
 
 }
 @media screen and (max-width: 768px) {
   .logo img {
-    width: 50px; /* Modifica le dimensioni per schermi più piccoli */
-    height: auto; /* Imposta l'altezza su "auto" per mantenere l'aspetto proporzionato */
-    margin: 5px auto auto 10px; /* Aggiorna i margini per centrare l'elemento */
+    width: 50px; 
+    height: auto; 
+    margin: 5px auto auto 10px; 
   }
 }
 
@@ -35,12 +35,13 @@
   margin: 0;
   padding: 0 0 0 15px;
   display: flex;
-
+  
 }
 
 .nav-links li {
   margin-right: 20px;
   font-family: 'Mooli', sans-serif;
+  
   
 }
 ul.nav-links {
@@ -56,6 +57,7 @@ ul.nav-links {
   font-weight: bold;
   font-size: 100%;
   cursor: pointer;
+  
 }
 
 .nav-links a:hover {
@@ -63,7 +65,7 @@ ul.nav-links {
 }
 
 /* Dropdown */
-/* Stile di base per il menu a discesa */
+
 .nav-links .dropdown {
   position: relative;
   display: inline-block;
@@ -76,11 +78,11 @@ ul.nav-links {
   box-shadow: 1px 2px 4px 2px rgba(172, 163, 163, 0.2);
   z-index: 1;
   border-radius: 5px;
-  min-width: 160px; /* Larghezza minima del menu a discesa */
-  text-align: left; /* Allinea il testo a sinistra */
+  min-width: 160px; 
+  text-align: left; 
 }
 
-/* Mostra il menu a discesa al passaggio del mouse o al tocco per dispositivi mobili */
+
 .nav-links .dropdown:hover .dropdown-content, .nav-links .dropdown:focus-within .dropdown-content {
   display: block;
 }
@@ -95,7 +97,7 @@ ul.nav-links {
   transition: background-color 0.3s;
 }
 
-/* Aggiungi spazi tra i link e aggiorna il font-size per una migliore esperienza mobile */
+
 @media (max-width: 768px) {
   .nav-links .dropdown-content a {
     padding: 8px;
